<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="50dp">

        <TextView
            android:id="@+id/firma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_background"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="#ffffff">

        </TextView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:shrinkColumns="1"
            android:stretchColumns="1">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:gravity="right"
                    android:text="@string/racun_br" />

                <EditText
                    android:id="@+id/faktura_broj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="text|textNoSuggestions" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:text="@string/mesto" />

                <EditText
                    android:id="@+id/faktura_mesto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="text|textNoSuggestions" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:text="@string/datum" />

                <EditText
                    android:id="@+id/faktura_datum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:text="@string/promet" />

                <EditText
                    android:id="@+id/faktura_promet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />
            </TableRow>
        </TableLayout>

        <Space
            android:layout_width="0px"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" >


            <TextView
                android:id="@+id/komitent_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:background="@drawable/gradient_background"
                android:textColor="#ffffff"
                android:paddingLeft="16dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/komitent" />

            <Spinner
                android:id="@+id/komitent_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <Space
            android:layout_width="0px"
            android:layout_height="20dp" />

        <TableLayout
            android:id="@+id/table_stavke"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="1"
            android:stretchColumns="1"
            >

            <TableRow android:background="@drawable/gradient_background">
                <TextView
                    android:id="@+id/col1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="   " />

                <TextView
                    android:id="@+id/col2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:textColor="#ffffff"
                    android:paddingLeft="4dp"
                    android:text="@string/opis_usluge" />

                <TextView
                    android:id="@+id/col3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:textColor="#ffffff"
                    android:paddingRight="20dp"
                    android:gravity="right"
                    android:text="@string/iznos" />

            </TableRow>
        </TableLayout>
        <Space
            android:layout_width="0px"
            android:layout_height="30dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin" >


        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/nacin_placanja" />

        <EditText
            android:id="@+id/placanje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:inputType="text|textNoSuggestions" />

        <Space
            android:layout_width="0px"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/napomena"
             />

        <EditText
            android:id="@+id/napomena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="text|textNoSuggestions" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
